--- a/gamepad.ui
+++ b/gamepad.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1350</width>
-    <height>548</height>
+    <width>1354</width>
+    <height>557</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -90,16 +90,15 @@
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="gridLayoutWidget">
+   <widget class="QWidget" name="widget_Cur_Thr" native="true">
     <property name="geometry">
      <rect>
-      <x>950</x>
+      <x>940</x>
       <y>10</y>
-      <width>331</width>
-      <height>191</height>
+      <width>411</width>
+      <height>491</height>
      </rect>
     </property>
-    <layout class="QGridLayout" name="gridLayout"/>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -107,7 +106,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1350</width>
+     <width>1354</width>
      <height>22</height>
     </rect>
    </property>
