--- a/gamepad.ui
+++ b/gamepad.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1354</width>
-    <height>557</height>
+    <width>1646</width>
+    <height>1042</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>210</y>
+      <x>50</x>
+      <y>500</y>
       <width>171</width>
       <height>241</height>
      </rect>
@@ -67,8 +67,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>70</y>
+      <x>60</x>
+      <y>10</y>
       <width>311</width>
       <height>51</height>
      </rect>
@@ -83,19 +83,49 @@
    <widget class="QTextEdit" name="message">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>10</y>
-      <width>501</width>
-      <height>491</height>
+      <x>50</x>
+      <y>70</y>
+      <width>391</width>
+      <height>401</height>
      </rect>
     </property>
    </widget>
    <widget class="QWidget" name="widget_Cur_Thr" native="true">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>10</y>
-      <width>411</width>
+      <x>1050</x>
+      <y>20</y>
+      <width>591</width>
+      <height>491</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_Cur_Brk" native="true">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>20</y>
+      <width>591</width>
+      <height>491</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_Cur_x2y2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>1050</x>
+      <y>520</y>
+      <width>591</width>
+      <height>491</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_Cur_x1y1" native="true">
+    <property name="geometry">
+     <rect>
+      <x>450</x>
+      <y>520</y>
+      <width>591</width>
       <height>491</height>
      </rect>
     </property>
@@ -106,7 +136,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1354</width>
+     <width>1646</width>
      <height>22</height>
     </rect>
    </property>
